# MLServe

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
infrastructure/: docker-compose.yml
src/mlserve/: __init__.py  __main__.py
src/mlserve/api/: app.py  dependencies.py  schemas.py
src/mlserve/api/routes/: deployments.py  health.py  models.py
src/mlserve/cli/: app.py  utils.py
src/mlserve/core/: config.py  database.py  exceptions.py  models.py
src/mlserve/runtime/: model_loader.py  server.py
src/mlserve/runtime/requirements/: onnx.txt  sklearn.txt
src/mlserve/services/: build_service.py  deploy_service.py  model_service.py
src/mlserve/templates/: base.Dockerfile.j2
tests/: conftest.py
tests/fixtures/: generate_models.py
tests/unit/: test_framework_detection.py  test_models.py  test_schemas.py
