[tool.poetry]
name = "mlserve"
version = "0.1.0"
description = "a self serving ML Platform. Give me an ml model, I will give you a production API"
authors = ["Raphael Adewale <raphealadebomi@gmail.com>"]
readme = "README.md"
packages= [{include = "mlserve", from = "src"}]

[tool.poetry.scripts]
mlserve = "mlserve.cli.app:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
typer = "^0.15.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
docker = "^7.1.0"
httpx = "^0.28.0"
rich = "^13.9.0"
aiosqlite = "^0.20.0"
python-multipart = ">=0.0.18"
prometheus-client = "^0.21.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"